...
    }
    
    @objc func filter() {
        let ac = UIAlertController(title: "Filter", message: nil, preferredStyle: .alert)
        ac.addTextField()

        let searchPetitions = UIAlertAction(title: "Search", style: .default) { [weak self, weak ac] _ in
            guard let searchText = ac?.textFields?[0].text?.lowercased() else { return }
            DispatchQueue.global().async {
                for petition in self!.filteredPetitions {
                    if !petition.title.lowercased().contains(searchText) && !petition.body.lowercased().contains(searchText) {
                        let petitionToRemove = petition
                        if let petitionToRemoveIndex = self?.filteredPetitions.firstIndex(of: petitionToRemove) {
...
