...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="08u-wE-ARe" id="Jxm-cf-FIh"/>
                            <outlet property="delegate" destination="08u-wE-ARe" id="4te-qQ-gyz"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Shakespeare" id="EOy-zy-KTk"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="MJz-kL-jKh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="903" y="92"/>
        </scene>
        <!--Navigation Controller-->
...
