//
//  UnitTestsSwiftUITests.swift
//  UnitTestsSwiftUITests
//
//  Created by Aleksandar Filipov on 6/15/22.
//

import XCTest

class UnitTestsSwiftUITests: XCTestCase {
    let app = XCUIApplication()
    
    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        app.launch()
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    
    func testInitialStateIsCorrect() {
//        let app = XCUIApplication()
//        app.launch()
        let table = app.tables
        XCTAssertEqual(table.cells.count, 7, "There should be 7 rows initially")
    }
    
    
    func testUserFilteringByString() {
//        let app = XCUIApplication()
//        app.launch()
        
        app.navigationBars["Shakespeare"].buttons["Search"].tap()
        
        app.alerts["Filter..."].textFields.element.typeText("test")
        app.alerts.buttons["Filter"].tap()
        
        XCTAssertEqual(app.tables.cells.count, 56, "There should be 56 words matching 'test'")
    }
    
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
